[package]
name = "eframe_template"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",           # To support Linux (and CI)
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }

euc = { git = "https://github.com/zesterer/euc.git", rev = "e8f7aee", default-features = false }
bytemuck = "1.23.1"
egui-euc = { git = "http://github.com/Masterchef365/egui-euc.git", branch = "main", default-features = false }
#egui-euc = { path = "../egui-euc", default-features = false }

anyhow = "1"
egui_demo_lib = "0.32.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)
